Start the new comment field in collapsed mode, expand on click or focus, make sure clicking the x button brings it back to collapsed state.

--- a/scss/partials/_add_comment.scss
+++ b/scss/partials/_add_comment.scss
@@ -2,6 +2,21 @@ div.add-comment-box-container {
   position: relative;
   width: 100%;
 
+  &.collapsed-box {
+    div.add-comment-box div.add-comment-internal {
+      height: 48px;
+      cursor: text;
+
+      div.add-comment:after {
+        cursor: text;
+      }
+
+      div.add-comment-footer {
+        display: none;
+      }
+    }
+  }
+
   @include tablet() {
     padding: 0;
     width: 100%;
@@ -16,7 +31,7 @@ div.add-comment-box-container {
       position: relative;
       border-radius: 4px;
       border: 1px solid $mid_light_grey;
-      padding: 16px;
+      padding: 13px 16px;
       background-color: white;;
 
       &.active {
@@ -104,10 +119,6 @@ div.add-comment-box-container {
 
           &:hover {
             background-color: rgba($deep_navy, 0.2);
-          }
-
-          @include mobile() {
-            display: none;
           }
         }
 
